Add CODEOWNERS file and update package.json description to match repository description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jamessawle/java-lambda",
   "version": "0.0.0",
-  "description": "Functional programming library bring Java Optional and lazily evaluated Streams to Javascript and Typescript",
+  "description": "Functional programming library bring lazily evaluated Java Optional and Streams to Javascript and Typescript",
   "repository": {
     "type": "git",
     "url": ""
