--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publish
 on:
   push:
     branches:
-      - 'main'
+      - "main"
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -17,10 +17,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20.x
-          cache: 'pnpm'
-      - uses: pnpm/action-setup@v3
-        name: Install pnpm
+          cache: "pnpm"
 
+      - run: pnpm install --frozen-lockfile
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@v1
