--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "playground:test": "pnpm build && find ./playground -name '*.test.ts' -exec node --import tsx --test {} \\;",
     "release": "pnpm build && pnpm changeset publish"
   },
-  "packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2",
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@types/node": "^20.11.24",
@@ -45,5 +44,6 @@
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.1.0"
-  }
+  },
+  "packageManager": "pnpm@7.33.7+sha256.d1581d46ed10f54ff0cbdd94a2373b1f070202b0fbff29f27c2ce01460427043"
 }
