Fix linting task to stop failing tests

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "dist/index.d.ts"
   ],
   "scripts": {
-    "lint": "pnpm tsc && pnpm eslint . && pnpm prettier --check .",
-    "lint:fix": "pnpm eslint . --fix && pnpm prettier --write .",
+    "lint": "pnpm tsc && pnpm build && pnpm eslint . && pnpm prettier --check .",
+    "lint:fix": "pnpm build && pnpm eslint . --fix && pnpm prettier --write .",
     "build": "pnpm tsup src/index.ts --format cjs,esm --dts --clean",
     "build:watch": "pnpm tsup src/index.ts --format cjs,esm --dts --watch",
     "test": "find ./src -name '*.test.ts' -exec node --import tsx --test {} \\;",
