--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "name": "James Sawle"
   },
   "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist/index.mjs",
+    "dist/index.js",
     "dist/index.d.ts"
   ],
   "scripts": {
